--- a/glimmer/glimmer.css
+++ b/glimmer/glimmer.css
@@ -9,23 +9,23 @@ aside {
 }
 
 .star {
-  -webkit-animation: glimmerStars .6s ease-in-out alternate infinite;
-          animation: glimmerStars .6s ease-in-out alternate infinite;
+  -webkit-animation: glimmerStars 1.2s ease-in-out alternate infinite;
+          animation: glimmerStars 1.2s ease-in-out alternate infinite;
 }
 .star:nth-child(2) {
    transform-origin: 100px 24px;
-  -webkit-animation-delay: 0.2s;
-          animation-delay: 0.2s;
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
 }
 .star:nth-child(3) {
    transform-origin: 42px 0px;
-  -webkit-animation-delay: 0.4s;
-          animation-delay: 0.4s;
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
 }
 .star:nth-child(4) {
    transform-origin: 16px 24px;
-  -webkit-animation-delay: 0.6s;
-          animation-delay: 0.6s;
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
 }
 
 @-webkit-keyframes glimmerStars {
